<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="182dp"
        android:layout_height="101dp"
        android:fontFamily="@font/aladin"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="178dp"
        android:layout_height="125dp"
        android:contentDescription="@string/app_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/playful_calculator_cartoon_by_vexels" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="402dp"
        android:layout_height="45dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.225"
        tools:ignore="TextSizeCheck" />


    <ImageButton
        android:id="@+id/add"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/sum"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="4.7dp"
        android:paddingBottom="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.055"
        app:srcCompat="@drawable/add__2_"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/sub"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/subtract"
        android:paddingStart="4.5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="4.5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintStart_toEndOf="@+id/add"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.055"
        app:srcCompat="@drawable/sub" />


    <ImageButton
        android:id="@+id/multiply"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/multiply"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="4.5dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.055"
        app:srcCompat="@drawable/multiply"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/div"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/division"
        android:paddingStart="4.5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add"
        app:layout_constraintVertical_bias="0.205"
        app:srcCompat="@drawable/divide__2_"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/percent"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/percent"
        android:cropToPadding="false"
        android:paddingStart="4dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="3.5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pow"
        app:layout_constraintStart_toEndOf="@+id/div"
        app:layout_constraintTop_toBottomOf="@+id/sub"
        app:layout_constraintVertical_bias="0.205"
        app:srcCompat="@drawable/percentage"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/clear"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/clear"
        android:cropToPadding="false"
        android:paddingStart="6dp"
        android:paddingTop="6dp"
        android:paddingEnd="6dp"
        android:paddingBottom="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/div"
        app:layout_constraintVertical_bias="0.431"
        app:srcCompat="@drawable/clear"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/equal"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/equal"
        android:paddingStart="5dp"
        android:paddingTop="7dp"
        android:paddingEnd="6dp"
        android:paddingBottom="6dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/percent"
        app:layout_constraintVertical_bias="0.431"
        app:srcCompat="@drawable/equal"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/pow"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="216dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/exponent"
        android:paddingStart="5.5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiply"
        app:layout_constraintVertical_bias="0.982"
        app:srcCompat="@drawable/pow"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="103dp"
        android:layout_height="63dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/num1"
        android:inputType="number|numberDecimal|numberSigned"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.483" />

    <TextView
        android:id="@+id/operator"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.564" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="103dp"
        android:layout_height="63dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/num2"
        android:inputType="number|numberDecimal|numberSigned"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/operator"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.486" />


</androidx.constraintlayout.widget.ConstraintLayout>
